--- a/coffee_shop_website/index.html
+++ b/coffee_shop_website/index.html
@@ -312,7 +312,7 @@
             </div>
         </div>
         <p class="footer-copy">
-            &copy; 2025 <a href="">Irajcodequeen</a> all rights reserved.
+            &copy; 2025 <a href="">Tariq Ali</a> all rights reserved.
         </p>
     </footer>
 
